// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package worker;

import "core/os/device/device.proto";

// Register request is the parameters for all worker registeration methods.
// The type of the worker is implied by the service the request is sent to.
message RegisterRequest {
  device.Instance host = 1;
  device.Instance target = 2;
}

// DoResponse is the common response to any task execution rpc method.
message DoResponse {
  // Id is the id of the action generated.
  string id = 1;
}

message UpdateResponse {}
